Changed navbar position to static to fix overlap

--- a/src/index.css
+++ b/src/index.css
@@ -92,7 +92,7 @@ main { position: relative; z-index: 1; }
 
 /* ---------- Top Navbar ---------- */
 .top-navbar {
-  position: fixed;
+  position: static;
   top: 0;
   left: 0;
   right: 0;
